# Dart_2026_ws

./: .gitignore  README.md  单边目标检测方案.dot  数据流.dot
src/filter/combined_models/: package.xml
src/filter/combined_models/include/combined_models/: IMM.h  IMM_CS_Parallel.h  IMM_CV_CA_CS_3Dim.h  IMM_CV_CA_CTRV.h
src/filter/combined_models/src/: IMM_CV_CA_CS_3Dim.cpp  IMM_CV_CA_CS_Singer_3Dim.cpp
src/filter/coordinate_filter/: CMakeLists.txt  package.xml
src/filter/distance_filter/: CMakeLists.txt  package.xml
src/filter/models/: CMakeLists.txt  package.xml
src/object_detection_openvino/: CMakeLists.txt  CONVERSION_SUMMARY.md  README_ROS2.md  package.xml
src/object_detection_openvino/config/: params.yaml
src/object_detection_openvino/include/object_detection_openvino/: object_detection_openvino_node.hpp  ros2_openvino_infer.hpp
src/object_detection_openvino/launch/: object_detection_openvino.launch.py  test_with_fake_image.launch.py
src/object_detection_openvino/scripts/: check_config.py  check_model_outputs  check_model_outputs.cpp  test_detection_results.py  test_image_publisher.py  test_inference  test_inference.cpp  test_openvinoRuntime01.py  test_openvinoRuntime02.py
src/object_detection_openvino/src/: object_detection_openvino_node.cpp  ros2_openvino_infer.cpp
src/rm_bringup/: CMakeLists.txt  package.xml
src/rm_hardware_driver/rm_serial_driver/: CMakeLists.txt  package.xml
src/rm_hardware_driver/ros2_hik_camera/: CMakeLists.txt  README.md  package.xml
src/rm_hardware_driver/ros2_hik_camera/config/: camera_info.yaml  camera_params.yaml  dual_camera_params.yaml
src/rm_hardware_driver/ros2_hik_camera/docs/: CHANGELOG_multi_camera.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  USAGE.md  multi_camera_guide.md
src/rm_hardware_driver/ros2_hik_camera/docx/: DIAGNOSIS_SUMMARY.md  PERFORMANCE_COMPARISON.md  README_CN.md  TROUBLESHOOTING.md  WSL2_USB_LIMITATIONS.md
src/rm_hardware_driver/ros2_hik_camera/include/ros2_hik_camera/: hik_camera_node.hpp
src/rm_hardware_driver/ros2_hik_camera/launch/: dual_camera_launch.py  hik_camera_launch.py  hik_camera_launch_with_sn.py  list_cameras_launch.py
src/rm_hardware_driver/ros2_hik_camera/scripts/: attach_camera_to_wsl2.ps1  build.sh  diagnose.py  test.sh  test_camera  test_camera.cpp  test_camera.sh  test_wsl2_usb_performance.sh
src/rm_hardware_driver/ros2_hik_camera/src/: ros2_hik_camera_node.cpp
src/rm_hardware_driver/ros2_mindvision_camera/: .gitignore.backup  CMakeLists.txt  DUAL_CAMERA_SETUP.md  FPS_CONTROL_README.md  README.md  RESOLUTION_FEATURE.md  package.xml
src/rm_hardware_driver/stereo_camera_driver/: CMakeLists.txt  package.xml
src/rm_hardware_driver/video_player/: CHANGELOG.md  CMakeLists.txt  QUICKSTART.md  README.md  TESTING.md  package.xml
src/rm_hardware_driver/video_player/config/: camera_info.yaml  video_params.yaml
src/rm_hardware_driver/video_player/launch/: video_player_launch.py
src/rm_hardware_driver/video_player/scripts/: run_video_player.sh
src/rm_hardware_driver/video_player/src/: video_player_node.cpp
src/rm_interfaces/: CMakeLists.txt  README.md  package.xml
src/rm_interfaces/msg/: MultiViewTarget.msg  MultiViewTargetArray.msg  Target2D.msg  Target2DArray.msg  Target3D.msg  Target3DArray.msg
src/rm_robot_description/: CMakeLists.txt  package.xml
src/rm_utils/resize_image_raw/: CMakeLists.txt  README.md  package.xml
src/rm_utils/resize_image_raw/config/: camera_left.yaml  camera_right.yaml  custom_aspect.yaml  downscale_half.yaml  fast_resize.yaml  resize_params.yaml  stereo_camera.yaml  upscale_double.yaml
src/rm_utils/resize_image_raw/docs/: CONFIG_GUIDE.md  RESIZE_NODE_INTEGRATION.md  TOPIC_CONFIG_EXAMPLES.md
src/rm_utils/resize_image_raw/include/resize_image_raw/: resize_node.hpp
src/rm_utils/resize_image_raw/launch/: downscale_half.launch.py  resize_node.launch.py  resize_with_config.launch.py  stereo_cameras.launch.py  stereo_cameras_with_config.launch.py  upscale_double.launch.py
src/rm_utils/resize_image_raw/scripts/: test_component_mode.py
src/rm_utils/resize_image_raw/src/: resize_node.cpp  resize_node_main.cpp
src/stereo_distance_estimator/: ARCHITECTURE.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  TEST_SETUP_COMPLETE.md  demo.sh  package.xml
src/stereo_distance_estimator/config/: stereo_distance_estimator.yaml
src/stereo_distance_estimator/docs/: COORDINATE_SCALING_GUIDE.md  IMAGE_SCALE_FIX.md  TESTING.md  TESTING_QUICKSTART.md
src/stereo_distance_estimator/include/stereo_distance_estimator/: stereo_distance_estimator_node.hpp
src/stereo_distance_estimator/launch/: full_system_test.launch.py  stereo_distance_estimator.launch.py  stereo_distance_estimator_config.launch.py
src/stereo_distance_estimator/scripts/: README.md  quick_test.sh  test_full_system.sh  test_publisher.py
src/stereo_distance_estimator/src/: main.cpp  stereo_distance_estimator_node.cpp
src/stereo_vision/: COMPARISON.md  INTEGRATION_GUIDE.md  README.md
src/stereo_vision/stereo_processor/: CMakeLists.txt  README.md  package.xml
src/stereo_vision/stereo_processor/config/: stereo_processor.yaml
src/stereo_vision/stereo_processor/docs/: DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MIGRATION_GUIDE.md  QUICKSTART.md  system_architecture.dot
src/stereo_vision/stereo_processor/include/stereo_processor/: stereo_processor_node.hpp
src/stereo_vision/stereo_processor/launch/: full_stereo_system.launch.py  stereo_processor.launch.py
src/stereo_vision/stereo_processor/scripts/: test_node.sh
src/stereo_vision/stereo_processor/src/: stereo_processor_node.cpp
src/stereo_vision/stereo_rectifier/: CMakeLists.txt  QUICKSTART.md  README.md  SUMMARY.md  package.xml
src/stereo_vision/stereo_rectifier/config/: left_camera_info.yaml  right_camera_info.yaml  stereo_calibration.yaml
src/stereo_vision/stereo_rectifier/launch/: complete_stereo_pipeline.launch.py  hik_stereo_rectify.launch.py  mindvision_stereo_rectify.launch.py  stereo_rectify.launch.py
src/target_matcher/: CMakeLists.txt  package.xml
(+48 files in other folders)
